syntax = "proto3";

package auth;
option go_package = ".;auth";


service AuthService{
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegistrationRequest) returns (RegistrationResponse);
  rpc VerifyUserPhone(VerifyPhoneRequest) returns (VerifyPhoneResponse);
  rpc IsAuthorized(IsAuthorizedRequest) returns (IsAuthorizedResponse);
  rpc GetUserId(GetUserIdRequest) returns (GetUserIdResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse { string access_token = 1; }

message RegistrationRequest {
  string username = 1;
  string password = 2;
  string phone = 3;
  string role_id=4;
}
message RegistrationResponse{
  string user_id=1;
}

message VerifyPhoneRequest{
  string phone=1;
}
message VerifyPhoneResponse{}
message GetUserIdRequest{
  string token=1;
}
message GetUserIdResponse{
  string id=1;
}
message IsAuthorizedRequest{
  string token=1;
  string path=2;
}
message IsAuthorizedResponse{
  bool is_authorized=1;
}
